source/stylesheets/cart.sass
@import 'variables'

#cart
  > header
    .secondary-header, .primary-header
      display: none

.cart-holder
  background-color: inherit
  height: auto
  left: 0
  max-height: 100vh
  overflow-y: auto
  padding: 0 7vw 120px
  position: fixed
  width: 100%
  z-index: 200
  
  @media screen and (max-width: $break-medium) and (orientation: portrait)
    height: 100vh
  
  header
    padding: 0
    position: relative
    top: 0
    left: 0
    width: 100%
    
  .store-link
    font-size: 40px
    
.cart-content
  margin: 0 auto
  max-width: 800px
  width: 100%

.cart-items
  border-bottom: 1px solid $button-background-color

.cart-item
  +flexbox
  +flex-direction(row)
  +align-items(center)
  border-top: 1px solid $button-background-color
  font-size: 16px
  padding: 20px 0
  
  @media screen and (max-width: $break-small)
    +flex-wrap(wrap)

.item-image-details
  +flexbox
  +align-items(center)
  
  @media screen and (max-width: $break-small)
    +flex-basis(80%)
  
.item-details
  padding: 0 24px
  
.item-quantity-holder
  +flexbox
  margin-left: auto
  padding-right: 60px
  
  @media screen and (max-width: $break-small)
    order: 3
    margin-left: 0
    margin-top: 20px
    max-width: 50%
    
.item-details-price
  @media screen and (max-width: $break-small)
    order: 4
    margin-top: 20px
    margin-left: auto
  
.item-details-option
  font-size: 10px
  margin-top: 12px
  
.qty-button
  background: none
  border: none
  height: 24px
  padding: 0
  width: 24px
  
  &.remove-qty
    margin-left: 30px
    
    @media screen and (max-width: $break-small)
      +flex-basis(20%)
      margin-left: auto
      order: 2
  
  svg
    height: 24px
    width: 24px
  
.qty-input
  background: none
  border: none
  height: 24px
  line-height: 24px
  text-align: center
  width: 64px

.item-image
  background-position: 50% 50%
  background-size: cover
  display: block
  height: 120px
  width: 120px
  
.checkout-btn
  margin-top: 32px
  
  @media screen and (max-width: $break-medium) and (orientation: portrait)
    bottom: 0
    left: 0
    position: fixed
    width: 100%

